# evaluation-digitalization

./: .gitignore  Cargo.toml  README.md  bootstrap.js  bun.lockb  package-lock.json  package.json  webpack.config.js
.github/workflows/: check-and-lint.yaml  test.yaml
src/: lib.rs
src/components/: acordeon.rs  acordeon2.rs  add_btn.rs  image.rs  input_image.rs  input_image_component.rs  input_name.rs  local_images.rs  mod.rs  submit_btn.rs
src/pages/: addPupil.js  home.rs
src/services/: indexdb.rs  mod.rs  rexie.rs
src/state/: state.rs
static/: index.html  main.css  main.js
