[package]
name = "yewchat"
version = "0.1.0"
edition = "2021"
description= "Rust yew front-end"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
wasm-bindgen = "0.2.45"
wasm-logger = "0.2"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
log = "0.4.6"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16"
reqwasm = "0.5"
web-sys = {version = "0.3.55", features=["File", "DragEvent", "DataTransfer"]}
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
serde_json = "1.0.73"
serde = {version = "1.0", features=["derive"]}
gloo-net = "0.2.4"
base64 = "0.13.0"
gloo = "0.8"
yewdux = "0.8"
js-sys = "0.3"
rexie = "0.4.2"
indexed_db_futures = "0.2.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "js",
]
